syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.echo.grpcdemo";
option java_outer_classname = "HelloProto";

// The greeting service definition.
service Hello {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
